--- a/rebar.config
+++ b/rebar.config
@@ -2,7 +2,10 @@
 	   {i,"include"},
 	   {i,"/home/joq62/erlang/include"},
             {d, 'EDOC', [{doc_path, "doc"}]}]}.
-{deps, []}.
+{deps, [
+       {erlport,".*",{git,"https://github.com/erlport/erlport.git","master"}}	
+       
+       ]}.
 {edoc_opts, [
   %  {doclet, edown_doclet},
  %   {top_level_readme, {"./README.md", "https://github.com/yourusername/yourproject"}},
