--- a/rebar.config
+++ b/rebar.config
@@ -3,8 +3,10 @@
 	   {i,"/home/joq62/erlang/include"},
             {d, 'EDOC', [{doc_path, "doc"}]}]}.
 {deps, [
-       {erlport,".*",{git,"https://github.com/erlport/erlport.git","master"}}	
-       
+     %  {erlport, {git,"git://github.com/erlport/erlport.git",{branch, "master"}}}
+        {erlport, {git,"https://github.com/erlport/erlport.git",{branch, "master"}}},
+	     {rd,{git,"https://github.com/joq62/rd.git",{branch,"main"}}},
+       {log,{git,"https://github.com/joq62/log.git",{branch,"main"}}}
        ]}.
 {edoc_opts, [
   %  {doclet, edown_doclet},
@@ -17,3 +19,37 @@
   % {config, "config/sys.config"},
     {apps, [proto_service]}
 ]}.
+
+{relx, [{release, {proto_service, "0.1.0"},
+         [
+	log,
+	rd,
+	erlport,
+
+          sasl]},
+
+        {mode, dev},
+
+        %% automatically picked up if the files
+        %% exist but can be set manually, which
+        %% is required if the names aren't exactly
+        %% sys.config and vm.args
+        {sys_config, "./config/sys.config"},
+        {vm_args, "./config/vm.args"}
+
+        %% the .src form of the configuration files do
+        %% not require setting RELX_REPLACE_OS_VARS
+        %% {sys_config_src, "./config/sys.config.src"},
+        %% {vm_args_src, "./config/vm.args.src"}
+]}.
+
+{profiles, [{prod, [{relx,
+                     [%% prod is the default mode when prod
+                      %% profile is used, so does not have
+                      %% to be explicitly included like this
+                      {mode, prod}
+
+                      %% use minimal mode to exclude ERTS
+                      %% {mode, minimal}
+                     ]
+            }]}]}.
